--- a/.github/workflows/RUSG.yml
+++ b/.github/workflows/RUSG.yml
@@ -1,4 +1,4 @@
-name: programmingwithkumaresan
+name: sjssjsnsnsnsnn
 
 on:
   workflow_dispatch:
@@ -17,4 +17,5 @@ jobs:
         run: cmd /c show.bat
 
       - name: Time Counter
+
         run: python time.py
